syntax = "proto3";

option go_package = "github.com/edgehook/ithings/transport/isync";

package isync;

message ReportAgentState {
  string agentId = 1;
  string agentName = 2;
  string status = 3;
}

message Response {
  string statusCode = 1;
  string msg = 2;
}

message AgentStateRequest {
    string tag = 1;
}

message AgentStateResponse {
  repeated ReportAgentState AgentInfo = 1;
}

message AppHubRequest {
    string tag = 1;
    string body = 2;
}

message AppHubResponse {
    string statusCode = 1;
    string msg = 2;
}

service ISync {
    rpc syncAgentState (stream Response) returns (stream ReportAgentState) {}
    rpc getAgentState (AgentStateRequest) returns (AgentStateResponse) {}
    rpc sendMsgToAppHub (AppHubRequest) returns (AppHubResponse) {}
    rpc sendMsgToIthing (stream Response) returns (stream AppHubRequest) {}
}
